feat#partners-api: finished

--- a/imersao/nestjs-partners-api/docker-compose.yaml
+++ b/imersao/nestjs-partners-api/docker-compose.yaml
@@ -13,3 +13,5 @@ services:
       POSTGRES_DB: partners-api
     ports:
       - 5432:5432
+    volumes:
+      - ./.docker/postgres:/docker-entrypoint-initdb.d
