--- a/imersao/nestjs-partners-api/Dockerfile
+++ b/imersao/nestjs-partners-api/Dockerfile
@@ -4,6 +4,8 @@ RUN apt update && apt install -y openssl procps
 
 RUN npm install -g @nestjs/cli@10.3.2
 
+RUN npm i -g npm@latest
+
 WORKDIR /home/node/app
 
 USER node
