--- a/imersao/nestjs-partners-api/.env.partner1
+++ b/imersao/nestjs-partners-api/.env.partner1
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:Mengo@2019@db:5432/partner1?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@db:5432/partner1?schema=public"
 API_TOKEN=123
